[metadata]
name = openentrance
author = openENTRANCE consortium
author_email = huppmann@iiasa.ac.at
license = APACHE-2.0
description = Nomenclature for the openENTRANCE project: variables, units, regions, ...
long_description = file: README.md
long_description_content_type = text/x-md
url = https://github.com/openENTRANCE/nomenclature

[options]
packages = openentrance
include_package_data = True
install_requires =
    setuptools >= 41
    pyyaml
    nomenclature
    pyam-iamc >= 1.0  # the pyam package is released on pypi under this name
    iam-units >= 2021.11.12
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.package_data]
nomenclature =
    nomenclature/definitions/*
