[metadata]
name = openentrance
author = openENTRANCE consortium
author_email = huppmann@iiasa.ac.at
license = APACHE-2.0
description = Nomenclature and utility methods for the Horizon 2020 openENTRANCE project
long_description = file: README.md
long_description_content_type = text/x-md
url = https://github.com/openENTRANCE/openentrance

[options]
packages = openentrance
install_requires =
    setuptools >= 41
    pyyaml
    nomenclature-iamc >= 0.19.0
    iam-units >= 2021.11.12
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
tests =
    pytest
